--- a/roles/openbsd.syspatch/tasks/main.yml
+++ b/roles/openbsd.syspatch/tasks/main.yml
@@ -5,4 +5,4 @@
   include: syspatch.yml
   when:
     - ansible_distribution_version >= "6.1"
-    - ansible_distribution_release != "current"
+    - ansible_distribution_release not in ["current", "beta"]
