--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 # ansible.cfg
 
 [defaults]
-ansible_managed = 'Managed by Ansible, do not edit directly'
-callback_whitelist = profile_tasks, timer
+ansible_managed = "Managed by Ansible, do not edit directly"
+callback_whitelist = profile_roles
 forks = 25
 host_key_checking = False
 internal_poll_interval = 0.01
