--- a/roles/openbsd.ntpd/tasks/main.yml
+++ b/roles/openbsd.ntpd/tasks/main.yml
@@ -7,10 +7,7 @@
     dest: /etc/ntpd.conf
     owner: root
     group: wheel
-    mode: 0600
-
-- name: start and enable ntpd
-  service:
-    name: ntpd
-    state: started
-    enabled: true
+    mode: "0600"
+  notify:
+    - enable ntpd
+    - start ntpd
