--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -6,6 +6,7 @@ callback_whitelist = profile_roles
 forks = 25
 host_key_checking = False
 internal_poll_interval = 0.01
+library = ./library
 nocows = 1
 stdout_callback = yaml
 var_compression_level = 9
