--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 # pyproject.toml
 
 [build-system]
-requires = ["poetry_core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry>=1.0.0"]
+build-backend = "poetry.masonry.api"
 
 [tool.black]
 line-length = 79
