Make all yml file headers uniform; trim junk

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,10 @@ cython_debug/
 # static files generated from Django application using `collectstatic`
 media
 static
+
+#
+# Fixes
+#
+
+# Allow 'var' subdirectories in ansible roles
+!**/roles/**/var
