--- a/openbsd_run/playbook/roles/openbsd.sysupgrade/defaults/main.yml
+++ b/openbsd_run/playbook/roles/openbsd.sysupgrade/defaults/main.yml
@@ -1,7 +1,5 @@
-
-# defaults file for openbsd.sysupgrade
-
-sysupgrade_branch: "auto"
+# openbsd.sysupgrade/defaults/main.yml
 
 connect_timeout: 600
 reboot_timeout: 600
+sysupgrade_branch: "auto"
