--- a/openbsd_run/playbook/roles/openbsd.www/defaults/main.yml
+++ b/openbsd_run/playbook/roles/openbsd.www/defaults/main.yml
@@ -1,3 +1,4 @@
+# openbsd.www/defaults/main.yml
 
 #
 # Global
@@ -20,7 +21,6 @@ www_header: |-
 
 www_footer: |-
   This is the footer.
-
 
 #
 # Pages
