--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -1,14 +1,17 @@
-# ansible.cfg
-
 [defaults]
-ansible_managed = "Managed by Ansible, do not edit directly"
+ansible_managed = Ansible managed: last modified %Y-%m-%d %H:%M:%S
+any_errors_fatal = True
 callback_whitelist = profile_roles
-forks = 25
+command_warnings = False
+forks = 50
+gathering = smart
 host_key_checking = False
+inject_facts_as_vars = True
 internal_poll_interval = 0.01
-library = ./modules
+library = ./modules:~/.ansible/plugins/modules
 nocows = 1
 stdout_callback = yaml
+unparsed_is_failed = True
 var_compression_level = 9
 
 [persistent_connection]
@@ -19,3 +22,4 @@ timeout = 300
 [ssh_connection]
 pipelining = True
 retries = 1
+sftp_batch_mode = True
