--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ molecule = "^3.0.0"
 mypy = "^0.780"
 poetry = "^1.0.10"
 pycodestyle = "^2.6.0"
+pyls-black = "^0.4.6"
+pyls-mypy = "^0.1.8"
+python-language-server = "^0.34.1"
 pytest = "^5.4.3"
 pytest-bandit = "^0.5.2"
 pytest-black = "^0.3.9"
