datetime in ansible_managed is an antipattern

--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-ansible_managed = Ansible managed: last modified %Y-%m-%d %H:%M:%S
+ansible_managed = Managed by Ansible. Do not edit directly.
 any_errors_fatal = True
 callback_whitelist = profile_roles
 command_warnings = False
