Rework things so we have initial parity between cli and the raw playbook

--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -1,25 +1,41 @@
 [defaults]
 ansible_managed = Managed by Ansible. Do not edit directly.
 any_errors_fatal = True
-callback_whitelist = profile_roles
+callback_whitelist = timer, yaml
 command_warnings = False
 forks = 50
+gather_subset = hardware,min,network,virtual
+gather_timeout = 300
 gathering = smart
-host_key_checking = False
 inject_facts_as_vars = True
 internal_poll_interval = 0.01
-library = ./modules:~/.ansible/plugins/modules
 nocows = 1
 stdout_callback = yaml
-unparsed_is_failed = True
+transport = ssh
 var_compression_level = 9
+
+# Paths
+inventory = ./inventory:~/.ansible/hosts:/etc/ansible/hosts
+library = ./modules:~/.ansible/plugins/modules
+roles_path = ./roles:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
+
+[diff]
+always = True
+
+[inventory]
+unparsed_is_failed = True
 
 [persistent_connection]
 command_timeout = 300
 connect_timeout = 300
 timeout = 300
 
+[privilege_escalation]
+become_method = doas
+
 [ssh_connection]
 pipelining = True
 retries = 1
 sftp_batch_mode = True
+ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s -o PreferredAuthentications=publickey
+usetty = False
