--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,4 +44,4 @@ pytest-black = "^0.3.9"
 pytest-mypy = "^0.6.2"
 
 [tool.poetry.scripts]
-openbsd-run = "openbsd_run.main:main"
+openbsd-run = "openbsd_run.cli:cli"
