--- a/sample.inventory.yml
+++ b/sample.inventory.yml
@@ -1,4 +1,10 @@
 # sample.inventory.yml
+#
+# I went a bit overboard with leaving comments, but my hope is that if this is
+# your first time looking at an Ansible inventory you won't have to do too much
+# prior reading.
+#
+##
 
 # The "all" group is a special group that refers to all hosts declared in this
 # file, not just this moniker itself.
@@ -13,9 +19,29 @@ all:
   # patched, but aren't specifically running some type of service as denoted by
   # the name of the groups below.
   hosts:
+    # This can be a domain name or IP address
+    maudlin.dev:
+
+# The "everything" group is a custom group that is a child of all following
+# groups, meaning that this is an all-in-one host that all services will be
+# deployed to.
+#
+# Right now this is primarily for testing things, so I personally wouldn't
+# suggest being so brazen.
+everything:
+  hosts:
     # This can be a domain name or IP address, and in the example below I've
     # used the hostname and defined the fqdn it points to.
     laptop:
       # This isn't required, provided  that above you used whatever hostname or
       # IP address that your host can actually reach over ssh.
       ansible_host: laptop.home.local
+
+# The "ports" group is a custom group that defines hosts that should be
+# configured for building packages in the ports tree.
+ports:
+  # The "children" moniker here allows us to define groups under it, so rather
+  # than declaring each host multiple times we can collate the hosts of these
+  # groups.
+  children:
+    everything:
