--- a/openbsd_run/playbook/site-pkg.yml
+++ b/openbsd_run/playbook/site-pkg.yml
@@ -1,11 +1,23 @@
 - name: Package
   hosts: all
   vars:
+    pkg_force: ""
     pkg_packages: "*"
     pkg_state: "latest"
 
   tasks:
+    - debug:
+        msg: |
+          pkg_force:    '{{ pkg_force }}'
+          pkg_packages: '{{ pkg_packages }}'
+          pkg_state:    '{{ pkg_state }}'
+
     - name: update packages
       pkg:
+        force: "{{ pkg_force if pkg_force else omit }}"
         name: "{{ pkg_packages }}"
         state: "{{ pkg_state }}"
+      register: result
+
+    - debug:
+        msg: "{{ result }}"
