--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 # pyproject.toml
 
 [build-system]
-requires = ["poetry>=1.0.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 79
@@ -13,13 +13,13 @@ version = "0.1.0"
 description = ""
 license = "MIT"
 readme = "README.md"
-authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
 repository = "https://github.com/jcmdln/openbsd.run"
+authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
 packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
-python = "^3.6"
-ansible = "^2.9"
+python = "^3.8.0"
+ansible-base = "^2.10.0"
 ansible-runner = "^1.4.6"
 click = "^7.1.2"
 pyyaml = "^5.3.1"
@@ -31,17 +31,16 @@ flake8 = "3.8.3"
 flake8-bandit = "^2.1.2"
 flake8-black = "^0.2.0"
 flake8-mypy = "^17.8.0"
-molecule = "^3.0.0"
+#molecule = "^3.0.0"
 mypy = "^0.780"
-poetry = "^1.0.10"
 pycodestyle = "^2.6.0"
 pyls-black = "^0.4.6"
 pyls-mypy = "^0.1.8"
-python-language-server = "^0.34.1"
 pytest = "^5.4.3"
 pytest-bandit = "^0.5.2"
 pytest-black = "^0.3.9"
 pytest-mypy = "^0.6.2"
+python-language-server = "^0.34.1"
 
 [tool.poetry.scripts]
 openbsd-run = "openbsd_run.cli:cli"
