Add cryptography and jinja2 runtime dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,15 +22,14 @@ python = "^3.8.0"
 ansible-base = "^2.10.0"
 ansible-runner = "^1.4.6"
 click = "^7.1.2"
+cryptography = "^3.1.1"
+jinja2 = "^2.11.2"
 pyyaml = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.6.2"
 black = "^19.10b0"
 flake8 = "3.8.3"
-flake8-bandit = "^2.1.2"
-flake8-black = "^0.2.0"
-flake8-mypy = "^17.8.0"
 #molecule = "^3.0.0"
 mypy = "^0.780"
 pycodestyle = "^2.6.0"
