--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # pyproject.toml
 
 [build-system]
-requires = ["poetry_core>=1.0.0"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
@@ -18,28 +18,28 @@ authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
 packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
-python = "^3.8.0"
-ansible-base = "^2.10.0"
-ansible-runner = "^1.4.6"
-click = "^7.1.2"
-cryptography = "^3.1.1"
-jinja2 = "^2.11.2"
-pyyaml = "^5.3.1"
+python = "^3.6"
+ansible-base = "^2.10"
+ansible-runner = "^1"
+click = "^7"
+cryptography = "^3"
+jinja2 = "^2"
+pyyaml = "^5"
 
 [tool.poetry.dev-dependencies]
-bandit = "^1.6.2"
-black = "^19.10b0"
-flake8 = "3.8.3"
-#molecule = "^3.0.0"
-mypy = "^0.780"
-pycodestyle = "^2.6.0"
-pyls-black = "^0.4.6"
-pyls-mypy = "^0.1.8"
-pytest = "^5.4.3"
-pytest-bandit = "^0.5.2"
-pytest-black = "^0.3.9"
-pytest-mypy = "^0.6.2"
-python-language-server = "^0.34.1"
+bandit = "^1"
+black = "^19"
+flake8 = "^3"
+#molecule = "^3"
+mypy = "^0"
+pycodestyle = "^2"
+pyls-black = "^0"
+pyls-mypy = "^0"
+pytest = "^5"
+pytest-bandit = "^0"
+pytest-black = "^0"
+pytest-mypy = "^0"
+python-language-server = "^0"
 
 [tool.poetry.scripts]
 openbsd-run = "openbsd_run.cli:cli"
