Add poetry as a dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ black = "^19"
 flake8 = "^3"
 #molecule = "^3"
 mypy = "^0"
+poetry = "^1"
 pycodestyle = "^2"
 pyls-black = "^0"
 pyls-mypy = "^0"
