Improve dependency handling; Relax mypy; Add and tweak pydocstyle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,11 @@
         "**/__pycache__/**": true,
         "**/.mypy_cache/**": true,
         "**/.venv/**": true,
-        "**/venv/**": true,
     },
     "files.watcherExclude": {
         "**/__pycache__/**": true,
         "**/.mypy_cache/**": true,
         "**/.venv/**": true,
-        "**/venv/**": true,
     },
     "python.formatting.provider": "black",
     "python.linting.enabled": true,
@@ -17,6 +15,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.mypyEnabled": true,
     "python.linting.pycodestyleEnabled": true,
+    "python.linting.pydocstyleEnabled": true,
     "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
     "python.venvPath": "${workspaceFolder}/.venv",
 }
