--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,9 @@
-# setup.cfg
-
 [mypy]
+disallow_untyped_decorators = false
+follow_imports = skip
+ignore_missing_imports = true
 namespace_packages = true
 strict = true
+
+[pydocstyle]
+ignore = D100, D107
