--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -14,8 +14,8 @@ var_compression_level = 9
 
 # Paths
 inventory = ./inventory:~/.ansible/hosts:/etc/ansible/hosts
-library = ./modules:~/.ansible/plugins/modules
-roles_path = ./roles:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
+library = ./modules
+roles_path = ./roles
 
 [diff]
 always = True
