--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 # pyproject.toml
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
 
 [tool.black]
 line-length = 79
@@ -19,24 +19,26 @@ packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-ansible-base = "^2.10"
-ansible-runner = "^1.4"
-click = "^7.1"
-cryptography = "^3.1"
-jinja2 = "^2.11"
-pyyaml = "^5.3"
+ansible-base = "^2.10.2"
+ansible-runner = "^1.4.6"
+click = "^7.1.2"
+cryptography = "^3.1.1"
+jinja2 = "^2.11.2"
+pyyaml = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
-bandit = "^1.6"
+bandit = "^1.6.2"
 black = "20.8b1"
-coverage = "^5.3"
-flake8 = "^3.8"
-#molecule = "^3"
+#coverage = "^5.3"
+flake8 = "^3.8.4"
+#molecule = "^3.1.2"
 mypy = "^0.790"
-pydocstyle = "^5.1"
-pyls-black = "^0.4"
-pytest = "^6.1"
-sphinx = "^3.2"
+poetry = "^1.1.3"
+pydocstyle = "^5.1.1"
+pyls-black = "^0.4.6"
+#pytest = "^6.1.1"
+#sphinx = "^3.2.1"
+#tox = "^3.20.1"
 
 [tool.poetry.dev-dependencies.python-language-server]
 extras = [
@@ -48,7 +50,7 @@ extras = [
     "pylint",
     "rope",
 ]
-version = "^0.35"
+version = "^0.35.1"
 
 [tool.poetry.scripts]
-openbsd-run = "openbsd_run.cli:cli"
+openbsd-run = "openbsd_run.main:cli"
