Further shifting of goals to deploying 'appliances'

--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -1,6 +1,9 @@
+# ansible.cfg
+
 [defaults]
 ansible_managed = Managed by Ansible. Do not edit directly.
 any_errors_fatal = True
+bin_ansible_callbacks = True
 command_warnings = False
 forks = 50
 gather_subset = hardware,min,network,virtual
@@ -9,6 +12,7 @@ gathering = smart
 inject_facts_as_vars = True
 internal_poll_interval = 0.01
 nocows = 1
+stdout_callback = default
 transport = ssh
 var_compression_level = 9
 
@@ -35,5 +39,9 @@ become_method = doas
 pipelining = True
 retries = 1
 sftp_batch_mode = True
-ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s -o PreferredAuthentications=publickey
+ssh_args =
+    -C
+    -o ControlMaster=auto
+    -o ControlPersist=60s
+    -o PreferredAuthentications=publickey
 usetty = False
