--- a/openbsd_run/playbook/site-dns.yml
+++ b/openbsd_run/playbook/site-dns.yml
@@ -1,6 +1,9 @@
-- name: DNS
-  hosts: dns
+# site-dns.yml
 
+- import_playbook: site-check.yml
+
+- name: dns
+  hosts: dns
   roles:
     - role: openbsd.nsd
       tags: [nsd]
