Use Mypy 0.800 & Python 3.9 type annotation style
This project now requires using Python v3.9 or later. While this
version may not be available everywhere, I think this is a reasonable
trade off considering how much "better" the type annotations are.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,20 @@
 [mypy]
-disallow_untyped_decorators = false
-follow_imports = skip
-ignore_missing_imports = true
-namespace_packages = true
-strict = true
+# disallow_subclassing_any = false
+# disallow_untyped_decorators = false
+# follow_imports = skip
+# ignore_missing_imports = true
+# namespace_packages = true
+# no_implicit_reexport = false
+# strict = true
 
 [pydocstyle]
-ignore = D100,D104,D107,D200,D202,D212
+ignore =
+    D100, # Missing docstring in public module
+    D101, # Missing docstring in public class
+    D102, # Missing docstring in public method
+    D103, # Missing docstring in public function
+    D104, # Missing docstring in public package
+    D107, # Missing docstring in __init__
+    D200, # One-line docstring should fit on one line with quotes
+    D202, # No blank lines allowed after function docstring
+    D212  # Multi-line docstring summary should start at the first line
