--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,39 +18,29 @@ authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
 packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
-python = "^3.6"
-ansible-base = "^2.10.2"
+python = "^3.9.0"
+ansible-base = "^2.10.5"
 ansible-runner = "^1.4.6"
 click = "^7.1.2"
-cryptography = "^3.1.1"
+cryptography = "^3.3.1"
 jinja2 = "^2.11.2"
-pyyaml = "^5.3.1"
+pyyaml = "^5.4.1"
 
 [tool.poetry.dev-dependencies]
-bandit = "^1.6.2"
+bandit = "^1.7.0"
 black = "20.8b1"
-#coverage = "^5.3"
-flake8 = "^3.8.4"
-#molecule = "^3.1.2"
-mypy = "^0.790"
-poetry = "^1.1.3"
+#coverage = "^5.4"
+mypy = "^0.800"
+poetry = "^1.1.4"
 pydocstyle = "^5.1.1"
 pyls-black = "^0.4.6"
-#pytest = "^6.1.1"
-#sphinx = "^3.2.1"
-#tox = "^3.20.1"
+#pytest = "^6.2.2"
+#sphinx = "^3.4.3"
+#tox = "^3.21.3"
 
 [tool.poetry.dev-dependencies.python-language-server]
-extras = [
-    "flake8",
-    "mccabe",
-    "pycodestyle",
-    "pydocstyle",
-    "pyflakes",
-    "pylint",
-    "rope",
-]
-version = "^0.35.1"
+extras = ["flake8", "mccabe", "pycodestyle", "pydocstyle", "pyflakes", "rope"]
+version = "^0.36.2"
 
 [tool.poetry.scripts]
 openbsd-run = "openbsd_run.main:cli"
