Ignore *.egg-info; Use Pylance as langauge server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,20 @@
 {
     "search.exclude": {
         "**/__pycache__/**": true,
+        "**/*.egg-info/**": true,
         "**/.mypy_cache/**": true,
         "**/.tox/**": true,
         "**/.venv/**": true,
     },
     "files.watcherExclude": {
         "**/__pycache__/**": true,
+        "**/*.egg-info/**": true,
         "**/.mypy_cache/**": true,
         "**/.tox/**": true,
         "**/.venv/**": true,
     },
     "python.formatting.provider": "black",
+    "python.languageServer": "Pylance",
     "python.linting.enabled": true,
     "python.linting.banditEnabled": true,
     "python.linting.flake8Enabled": true,
