Enable strict mypy checking

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,5 @@
 [mypy]
-# disallow_subclassing_any = false
-# disallow_untyped_decorators = false
-# follow_imports = skip
-# ignore_missing_imports = true
-# namespace_packages = true
-# no_implicit_reexport = false
-# strict = true
+strict = true
 
 [pydocstyle]
 ignore =
