--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [mypy]
 strict = true
 
+# found module but no type hints or library stubs
+ignore_missing_imports = True
+
 [pydocstyle]
 ignore =
     D100, # Missing docstring in public module
