--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,6 @@
 build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core>=1.0.0"]
 
-[tool.black]
-line-length = 79
-
 [tool.poetry]
 name = "openbsd-run"
 version = "0.1.0"
@@ -18,25 +15,25 @@ authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
 packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.6.2"
 ansible = "^3.1.0"
-ansible-runner = "^1.4.6"
+ansible-runner = "^1.4.7"
 click = "^7.1.2"
-cryptography = "^3.3.1"
-jinja2 = "^2.11.2"
+cryptography = "^3.4.6"
+jinja2 = "^2.11.3"
 pyyaml = "^5.4.1"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.0"
-black = "^20.8b1"
-#coverage = "^5.4"
+black = "20.8b1"
+coverage = "^5.5"
 mypy = "^0.812"
-poetry = "^1.1.4"
+poetry = "^1.1.5"
 pydocstyle = "^5.1.1"
 pyls-black = "^0.4.6"
-#pytest = "^6.2.2"
-#sphinx = "^3.4.3"
-tox = "^3.21.3"
+pytest = "^6.2.2"
+sphinx = "^3.5.2"
+tox = "^3.23.0"
 
 [tool.poetry.dev-dependencies.python-language-server]
 extras = ["flake8", "mccabe", "pycodestyle", "pydocstyle", "pyflakes", "rope"]
@@ -44,3 +41,10 @@ version = "^0.36.2"
 
 [tool.poetry.scripts]
 openbsd-run = "openbsd_run.main:cli"
+
+#
+# Extras
+#
+
+[tool.black]
+line-length = 79
