--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,14 +11,14 @@
             "**/.mypy_cache/**": true,
             "**/.tox/**": true,
             "**/.venv/**": true,
-            "**/vendor/**": true,
-        },
+            "**/vendor/**": true
+        }
     },
     "[python]": {
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true,
+            "source.organizeImports": true
         },
-        "editor.formatOnSave": true,
+        "editor.formatOnSave": true
     },
     "[search]": {
         "exclude": {
@@ -27,8 +27,8 @@
             "**/.mypy_cache/**": true,
             "**/.tox/**": true,
             "**/.venv/**": true,
-            "**/vendor/**": true,
-        },
+            "**/vendor/**": true
+        }
     },
     "evenBetterToml.formatter.columnWidth": 79,
     "python.formatting.provider": "black",
@@ -40,5 +40,5 @@
     "python.linting.pycodestyleEnabled": true,
     "python.linting.pydocstyleEnabled": true,
     "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
-    "python.venvPath": "${workspaceFolder}/.venv",
+    "python.venvPath": "${workspaceFolder}/.venv"
 }
