--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -4,7 +4,9 @@
 ansible_managed = Managed by Ansible. Do not edit directly.
 any_errors_fatal = True
 bin_ansible_callbacks = True
+callback_whitelist = profile_roles,timer
 command_warnings = False
+deprecation_warnings = False
 forks = 50
 gather_subset = hardware,min,network,virtual
 gather_timeout = 300
@@ -17,9 +19,9 @@ transport = ssh
 var_compression_level = 9
 
 # Paths
-inventory = ./inventory:~/.ansible/hosts:/etc/ansible/hosts
+#inventory = ./inventory:~/.ansible/hosts:/etc/ansible/hosts
 library = ./modules
-roles_path = ./roles
+#roles_path = ./roles
 
 [diff]
 always = True
@@ -43,5 +45,5 @@ ssh_args =
     -C
     -o ControlMaster=auto
     -o ControlPersist=60s
-    -o PreferredAuthentications=publickey
+    -o PreferredAuthentications=publickey,password
 usetty = False
