Drastically decrease required dependencies
Prior to this commit if you setup a virtualenv and installed
openbsd-run it would have been around 400mb. As of this commit we now
use the ansible-core package and the required dependencies which has
lowered this to around 47mb, making this much more palatable to
install.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,14 @@ packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
-ansible = "^3.1.0"
+
+ansible-core = "^2.11.0-beta.3"
 ansible-runner = "^1.4.7"
 click = "^7.1.2"
 cryptography = "^3.4.6"
 jinja2 = "^2.11.3"
-pyyaml = "^5.4.1"
+packaging = "~20.9"
+resolvelib = "~0.5.4"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.0"
